--- a/EmployeeRegistration/EmployeeRegistration.Data.Repositories/EmployeeRegistration.Data.Repositories.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Data.Repositories/EmployeeRegistration.Data.Repositories.csproj
@@ -42,9 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CompanyRepository.cs" />
+    <Compile Include="Repositories\EmployeeRepository.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\EmployeeRegistration.Data.Contracts\EmployeeRegistration.Data.Contracts.csproj">
+      <Project>{923aa0cb-93c1-47ff-b8ab-bbd4ddbe4500}</Project>
+      <Name>EmployeeRegistration.Data.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
