--- a/EmployeeRegistration/EmployeeRegistration.Web/EmployeeRegistration.Web.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Web/EmployeeRegistration.Web.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeRegistration.Domain.Contracts\EmployeeRegistration.Domain.Contracts.csproj" />
+    <ProjectReference Include="..\EmployeeRegistration.Domain.Services\EmployeeRegistration.Domain.Services.csproj" />
+  </ItemGroup>
+
 </Project>
