--- a/EmployeeRegistration/EmployeeRegistration.Infrastructure/EmployeeRegistration.Infrastructure.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Infrastructure/EmployeeRegistration.Infrastructure.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{923AA0CB-93C1-47FF-B8AB-BBD4DDBE4500}</ProjectGuid>
+    <ProjectGuid>{A508AE43-D6D6-4D13-AD2D-6956813E16A9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EmployeeRegistration.Data.Contracts</RootNamespace>
-    <AssemblyName>EmployeeRegistration.Data.Contracts</AssemblyName>
+    <RootNamespace>EmployeeRegistration.Infrastructure</RootNamespace>
+    <AssemblyName>EmployeeRegistration.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,13 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Company.cs" />
-    <Compile Include="Entities\Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ICompanyRepository.cs" />
-    <Compile Include="Repositories\IEmployeeRepository.cs" />
-    <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
