--- a/EmployeeRegistration/EmployeeRegistration.Data.Contracts/EmployeeRegistration.Data.Contracts.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Data.Contracts/EmployeeRegistration.Data.Contracts.csproj
@@ -43,9 +43,13 @@
   <ItemGroup>
     <Compile Include="Entities\Company.cs" />
     <Compile Include="Entities\Employee.cs" />
+    <Compile Include="Entities\Form.cs" />
+    <Compile Include="Entities\Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICompanyRepository.cs" />
     <Compile Include="Repositories\IEmployeeRepository.cs" />
+    <Compile Include="Repositories\IFormRepository.cs" />
+    <Compile Include="Repositories\IPositionRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
   <ItemGroup />
