--- a/EmployeeRegistration/EmployeeRegistration.Data.Repositories/EmployeeRegistration.Data.Repositories.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Data.Repositories/EmployeeRegistration.Data.Repositories.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CompanyRepository.cs" />
     <Compile Include="Repositories\EmployeeRepository.cs" />
+    <Compile Include="Repositories\FormRepository.cs" />
+    <Compile Include="Repositories\PositionRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EmployeeRegistration.Data.Contracts\EmployeeRegistration.Data.Contracts.csproj">
