--- a/EmployeeRegistration/EmployeeRegistration.Domain.Contracts/EmployeeRegistration.Domain.Contracts.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Domain.Contracts/EmployeeRegistration.Domain.Contracts.csproj
@@ -49,8 +49,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ICompanyService.cs" />
     <Compile Include="Services\IEmployeeService.cs" />
+    <Compile Include="Services\IFormService.cs" />
+    <Compile Include="Services\IPositionService.cs" />
     <Compile Include="ViewModels\CompanyViewModel.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
+    <Compile Include="ViewModels\FormViewModel.cs" />
+    <Compile Include="ViewModels\PositionViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
