--- a/EmployeeRegistration/EmployeeRegistration.Domain.Services/EmployeeRegistration.Domain.Services.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Domain.Services/EmployeeRegistration.Domain.Services.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CompanyService.cs" />
     <Compile Include="Services\EmployeeService.cs" />
+    <Compile Include="Services\FormService.cs" />
+    <Compile Include="Services\PositionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EmployeeRegistration.Data.Contracts\EmployeeRegistration.Data.Contracts.csproj">
@@ -58,6 +60,10 @@
     <ProjectReference Include="..\EmployeeRegistration.Domain.Contracts\EmployeeRegistration.Domain.Contracts.csproj">
       <Project>{38b5493f-4e50-4f26-b26a-efe0de952731}</Project>
       <Name>EmployeeRegistration.Domain.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EmployeeRegistration.Infrastructure\EmployeeRegistration.Infrastructure.csproj">
+      <Project>{A508AE43-D6D6-4D13-AD2D-6956813E16A9}</Project>
+      <Name>EmployeeRegistration.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
