--- a/EmployeeRegistration/EmployeeRegistration.Domain.Services/EmployeeRegistration.Domain.Services.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Domain.Services/EmployeeRegistration.Domain.Services.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SelectHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CompanyService.cs" />
     <Compile Include="Services\EmployeeService.cs" />
