--- a/EmployeeRegistration/EmployeeRegistration.Infrastructure/EmployeeRegistration.Infrastructure.csproj
+++ b/EmployeeRegistration/EmployeeRegistration.Infrastructure/EmployeeRegistration.Infrastructure.csproj
@@ -56,5 +56,6 @@
       <Name>EmployeeRegistration.Domain.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
